--- a/app/app/src/main/res/layout/activity_main.xml
+++ b/app/app/src/main/res/layout/activity_main.xml
@@ -66,6 +66,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center|bottom"
-        android:text="Build By: GauravGupta 2019" />
+        android:text="Build By: GauravGupta 2019"
+        android:padding="5dp"
+        android:textSize="12sp"/>
 
 </LinearLayout>
