--- a/app/app/src/main/res/drawable/backdesign.xml
+++ b/app/app/src/main/res/drawable/backdesign.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="#fff"
+    <gradient android:startColor="#e5ffffff"
         android:angle="-90"
-        android:endColor="#83000000"
+        android:centerColor="#6fffffff"
+        android:endColor="#8f222222"
         />
 </shape>
