--- a/app/app/src/main/res/layout/activity_registration.xml
+++ b/app/app/src/main/res/layout/activity_registration.xml
@@ -73,7 +73,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/signup_text"
+        android:id="@+id/login_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
