--- a/app/app/src/main/res/drawable/toolbar.xml
+++ b/app/app/src/main/res/drawable/toolbar.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="@color/colorAccent"
+        android:angle="45"
+        android:startColor="@color/colorPrimary"
         android:centerColor="@color/center"
-        android:angle="-90"
-        android:endColor="@color/colorPrimaryDark"
-        />
+        android:endColor="@color/colorPrimaryDark">
+    </gradient>
 </shape>
