--- a/app/app/src/main/res/layout/activity_main.xml
+++ b/app/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginBottom="50dp"
         android:gravity="center"
         android:padding="20dp"
-        android:text="Task Manager"
+        android:text="Taskmanager.io"
         android:textSize="30sp" />
 
     <LinearLayout
