--- a/app/app/src/main/res/layout/activity_registration.xml
+++ b/app/app/src/main/res/layout/activity_registration.xml
@@ -15,7 +15,7 @@
         android:layout_marginBottom="50dp"
         android:gravity="center"
         android:padding="20dp"
-        android:text="Task Manager"
+        android:text="Taskmanager.io"
         android:textSize="30sp" />
 
     <LinearLayout
