--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#000000</color>
-    <color name="colorPrimaryDark">#fff</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#0096ff</color>
+    <color name="colorPrimaryDark">#0000cc</color>
+    <color name="colorAccent">#E5FFFFFF</color>
+    <color name="center">#2185D5</color>
 </resources>
