--- a/app/app/src/main/res/layout/custom_input_field.xml
+++ b/app/app/src/main/res/layout/custom_input_field.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="25dp">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -11,6 +12,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="New Task"
+                android:textAppearance="?android:textAppearanceMedium"
+                android:gravity="center"
+                android:padding="5dp"
+                android:textSize="30sp"
+                android:layout_margin="5dp"
+                android:textColor="@color/colorPrimaryDark"
+             />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -39,7 +52,7 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
                         android:id="@+id/edt_title"
-                        android:textColor="@android:color/white"
+                        android:textColor="@android:color/black"
                     />
                 </RelativeLayout>
 
@@ -72,7 +85,7 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
                         android:id="@+id/edt_note"
-                        android:textColor="@android:color/white"
+                        android:textColor="@android:color/black"
                         />
                 </RelativeLayout>
 
