--- a/app/app/src/main/res/drawable/backdesign.xml
+++ b/app/app/src/main/res/drawable/backdesign.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="@color/colorAccent"
-        android:centerColor="@color/center"
+        android:startColor="#fff"
         android:angle="-90"
         android:endColor="@color/colorPrimaryDark"
         />
