--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#0096ff</color>
     <color name="colorPrimaryDark">#0000cc</color>
-    <color name="colorAccent">#E5FFFFFF</color>
+    <color name="colorAccent">#ff0000</color>
     <color name="center">#2185D5</color>
 </resources>
